syntax = "proto3";

import "common.proto";

option csharp_namespace = "AcademyCloud.Identity.Protos.Projects";

package projects;

service Projects {
  rpc GetAccessibleProjects(GetAccessibleProjectsRequest)
      returns (GetAccessibleProjectsResponse);
  rpc GetUsersOfProject(GetUsersOfProjectRequest)
      returns (GetUsersOfProjectResponse);
  rpc AddUserToProject(AddUserToProjectRequest)
      returns (AddUserToProjectResponse);
  rpc ChangeUserRole(ChangeUserRoleRequest)
      returns (ChangeUserRoleResponse);
  rpc RemoveUserFromProject(RemoveUserFromProjectRequest)
      returns (RemoveUserFromProjectResponse);
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
}

message GetAccessibleProjectsRequest {}

message GetAccessibleProjectsResponse { repeated common.Project projects = 1; }

message GetUsersOfProjectRequest { 
  string projectId = 1;
}


message GetUsersOfProjectResponse {
  repeated common.ProjectUser admins = 1;
  repeated common.ProjectUser members = 2;
}

message AddUserToProjectRequest {
  string projectId = 1;
  string userId = 2;
  common.UserRole role = 3;
}

message AddUserToProjectResponse {
  string userProjectAssignmentId = 1;
}

message ChangeUserRoleRequest {
  string projectId = 1;
  string userId = 2;
  common.UserRole role = 3;
}

message ChangeUserRoleResponse {}

message RemoveUserFromProjectRequest {
  string projectId = 1;
  string userId = 2;
}

message RemoveUserFromProjectResponse {}

message CreateProjectRequest {
  string name = 1;
  string adminId = 2;
}

message CreateProjectResponse {
  string projectId = 1;
  string adminAssignmentId = 2;
}

message DeleteProjectRequest { string projectId = 1; }

message DeleteProjectResponse {}
